# geometry-lab

./: CMakeLists.txt
demo/: CMakeLists.txt  demo.cpp
extend/: CMakeLists.txt
extend/ImGuiFileDialog/: CMakeLists.txt
extend/eigen/: CMakeLists.txt
extend/glad/: CMakeLists.txt
extend/glfw/: CMakeLists.txt
extend/glm/: CMakeLists.txt
extend/imgui/: CMakeLists.txt
extend/openmesh/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  trimesh.cpp  trimesh.hpp
src/render/: CMakeLists.txt  loader.cpp  loader.hpp  main_widget.cpp  main_widget.hpp  mesh_painter.cpp  mesh_painter.hpp  painter.hpp  render_config.hpp  render_config.hpp.in  shader.hpp
src/render/shader/: mesh_fill.frag  mesh_fill.vert  mesh_line.frag  mesh_line.vert
