include(FetchContent)
set(FETCHCONTENT_QUIET FALSE)

add_subdirectory(openmesh)
add_subdirectory(eigen)
add_subdirectory(glad)
add_subdirectory(glfw)
add_subdirectory(glm)
add_subdirectory(imgui)
add_subdirectory(ImGuiFileDialog)
set_target_properties(OpenMeshCore PROPERTIES FOLDER "extend")
set_target_properties(OpenMeshTools PROPERTIES FOLDER "extend")
set_target_properties(uninstall PROPERTIES FOLDER "extend")
set_target_properties(glad PROPERTIES FOLDER "extend")
set_target_properties(glfw PROPERTIES FOLDER "extend")
set_target_properties(glm PROPERTIES FOLDER "extend")
set_target_properties(imgui PROPERTIES FOLDER "extend")
set_target_properties(filedialog PROPERTIES FOLDER "extend")